# PrintFarmEnv

./: .gitattributes  .gitignore  Dockerfile  README.md  SESSION_NOTES.md  benchmark.py  benchmark_results.json  create_mock_run.py  demo_trajectory.json  inference.py  models.json  openenv.yaml  pyproject.toml  requirements.txt  task-list.md  test_experimental.py  validate-submission.sh  verify_fixes.py  visualize_rewards.py
submission/: .gitignore  Dockerfile  README.md  __init__.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
submission/data/: grpo_eval.jsonl  grpo_train.jsonl  grpo_val.jsonl  sft_v3.jsonl  sft_warm.jsonl
submission/env/: __init__.py  customer_messages.py  decision_point.py  env.py  failures.py  models.py  novel_faults.py  operator_notes.py  operators.py  tasks.py
submission/eval/: __init__.py  baseline_sft_only.json  baseline_untrained.json  baselines.json  eval_model.py  grpo_eval.json  grpo_eval_v2.json  run_baselines.py
submission/notebooks/: PrintFarmEnv_Training.ipynb
submission/rewards/: __init__.py  composite.py  r_economic.py  r_fault_precision.py  r_format.py  r_message_handling.py  r_novel_fault.py  r_unnecessary_action.py  rubrics.py
submission/scripts/: __init__.py  check_reward_distribution.py  check_shortcut_leakage.py  make_plots.py  make_reward_visuals.py  watch_training.py
submission/server/: __init__.py  app.py
submission/shared/: __init__.py  obs_formatter.py  parse_action.py  prompt.py  serialize.py
submission/tests/: __init__.py  test_smoke.py
submission/training/: __init__.py  merge_sft_hf.py  (+11 more)
(+44 files in other folders)
