[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "printfarm_env"
version = "1.0.0"
description = "A hardware DevOps environment for managing a fleet of 3D printers and inventory."
dependencies = [
    "openenv-core",
    "openai",
    "pydantic",
    "fastapi",
    "uvicorn"
]

[project.scripts]
server = "server.app:main"
