[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "printfarm-env"
version = "2.0.0"
description = "3D Print Farm Dispatcher — OpenEnv hackathon submission"
dependencies = [
    "openenv-core>=0.1",
    "openai>=1.0",
    "pydantic>=2.0,<3",
    "fastapi>=0.100",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
training = ["torch", "transformers", "trl", "datasets", "wandb"]

[tool.setuptools.packages.find]
where = ["."]
include = ["submission*"]
